[package]
name = "flowstate"
version = "0.6.1"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Workflow runtime powered by finite state machines."
homepage = "https://github.com/bcheidemann/flowstate"
repository = "https://github.com/bcheidemann/flowstate"
readme = "README.md"

[features]
macros = ["dep:flowstate_proc"]
default = ["macros"]

[dependencies]
flowstate_proc = { version = "0.6.1", path = "../flowstate_proc", optional = true }
