[package]
name = "flowstate"
version = "0.8.2"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Workflow runtime powered by finite state machines."
categories = ["rust-patterns"]
homepage = "https://github.com/bcheidemann/flowstate"
repository = "https://github.com/bcheidemann/flowstate"
readme = "README.md"

[features]
async = ["dep:async-trait"]
macros = ["dep:flowstate_proc"]
unstable_middleware = []
default = ["async", "macros"]

[dependencies]
async-trait = { version = "0.1.89", optional = true }
flowstate_proc = { version = "0.8.2", path = "../flowstate_proc", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
