[package]
name = "flowstate_middleware_tracing"
version = "0.7.2"
edition = "2024"

[features]
async = ["flowstate/async"]
default = ["async"]

[dependencies]
flowstate = { version = "0.7.2", path = "../flowstate", default-features = false, features = ["unstable_middleware"] }
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
tracing_test_subscriber = { version = "0.1.0", path = "../tracing_test_subscriber" }
