[package]
name = "flowstate_middleware_tracing"
version = "0.8.1"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Tracing middleware for flowstate."
homepage = "https://github.com/bcheidemann/flowstate"
repository = "https://github.com/bcheidemann/flowstate"
readme = "README.md"

[features]
async = ["flowstate/async"]
default = ["async"]

[dependencies]
flowstate = { version = "0.8.1", path = "../flowstate", default-features = false, features = ["unstable_middleware"] }
tracing = "0.1"

[dev-dependencies]
flowstate = { version = "0.8.1", path = "../flowstate", default-features = false, features = ["unstable_middleware", "macros"] }
tokio = { version = "1", features = ["rt", "macros"] }
tracing_test_subscriber = { version = "0.1.0", path = "../tracing_test_subscriber" }
