[package]
name = "flowstate_proc"
version = "0.3.1"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Procedural macros for flowstate."
homepage = "https://github.com/bcheidemann/flowstate"
repository = "https://github.com/bcheidemann/flowstate"
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.106"
quote = "1.0.45"
syn = "2.0.117"
